# deepcnn4cifar

./: .gitignore  .gitmodules  LICENSE  README.md  Requirments.txt  architecture.ipynb  data_preprocessing.ipynb  main.py  pyproject.toml  pytest.ini  requirements.txt  vgg4cifar.ipynb
assets/: vgg11_template.tex
core/: config.py
core/assets/: vgg16_template.tex
notebooks/: data_preprocessing.ipynb
scripts/: evaluate.py  train.py  visualize.py
src/: config.py  main.py  preprocessing.py  utils.py
src/core/: config.py  gradcam.py  model.py
src/deepcnn4cifar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scripts/: evaluate.py  train.py  visualize.py
src/utils/: load_data.py  load_model.py  training_utils.py
tests/: test_data.py  test_model.py
utils/: load_data.py  load_model.py  transfer_weights.py
