[project]
name = "deepcnn4cifar"
version = "0.1.0"
requires-python = "==3.12.7"
description = "Implementing VGG11 and VGG16 for CIFAR-10"
authors = [
    { name = "Jose Enrique Lopez", email = "ikinglopez1@gmail.com" },
    { name = "Amit Yelin", email = "amityelin@gmail.com" }
]
dependencies = [
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "filelock==3.17.0",
    "fonttools==4.55.7",
    "fsspec==2024.12.0",
    "huggingface-hub==0.28.0",
    "idna==3.10",
    "Jinja2==3.1.5",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "sympy==1.13.3",
    "threadpoolctl==3.5.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm==4.67.1",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
